wip StudentModuleTableModel